# ios-rust-greeting

./: .gitignore  README.md  build.rs  my.proto
cargo/: Cargo.toml  my_header.h
cargo/src/: greetings.h  lib.rs  main.rs  mod.rs  my.rs
ios/Greetings/: Package.swift  Podfile
ios/Greetings/Greetings/: AppDelegate.swift  Greetings-Bridging-Header.h  RustGreetings.swift  SceneDelegate.swift  ViewController.swift  my.pb.swift
ios/Greetings/Greetings.xcodeproj/: project.pbxproj
ios/Greetings/GreetingsTests/: GreetingsTests.swift
ios/Greetings/GreetingsUITests/: GreetingsUITests.swift  GreetingsUITestsLaunchTests.swift
