[package]
name = "cargo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "greetings"
crate-type = ["staticlib", "cdylib"]

[dependencies]
protobuf = "3.0.2"
reqwest = { version = "0.11", features = ["json"] }
url = "2.2.2"
serde = { version = "1.0", features = ["derive"]}
tokio = { version = "1.21.2", features = ["full"] }
